remove google authentication
