# src/main/java/com/rabit/api/config/SwaggerConfig.java
@@ -3,9 +3,6 @@ package com.rabit.api.config;
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
-import io.swagger.v3.oas.models.security.OAuthFlow;
-import io.swagger.v3.oas.models.security.OAuthFlows;
-import io.swagger.v3.oas.models.security.Scopes;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import org.springframework.context.annotation.Bean;
@@ -22,23 +19,13 @@ public class SwaggerConfig {
                         .description("Multi-tenant SaaS API for invoice management")
                         .version("1.0.0"))
                 .addSecurityItem(new SecurityRequirement()
-                        .addList("Bearer Authentication")
-                        .addList("Google OAuth2"))
+                        .addList("Bearer Authentication"))
                 .components(new Components()
                         .addSecuritySchemes("Bearer Authentication",
                                 new SecurityScheme()
                                         .type(SecurityScheme.Type.HTTP)
                                         .scheme("bearer")
                                         .bearerFormat("JWT")
-                                        .description("Enter JWT token"))
-                        .addSecuritySchemes("Google OAuth2",
-                                new SecurityScheme()
-                                        .type(SecurityScheme.Type.OAUTH2)
-                                        .flows(new OAuthFlows()
-                                                .authorizationCode(new OAuthFlow()
-                                                        .authorizationUrl("/oauth2/authorization/google")
-                                                        .scopes(new Scopes()
-                                                                .addString("email", "Access email")
-                                                                .addString("profile", "Access profile"))))));
+                                        .description("Enter JWT token")));
     }
 }
